<resources>
    <string name="app_name">Quoter</string>
    <string name="start">Start</string>
    <string name="favorite">Favorites</string>
    <string name="info">Main</string>
    <string name="add">Add to Favorites</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="info2">Favorites</string>
    <string name="main">Main</string>
</resources>
